--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/</vite-react-tasks-example>/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite-react-tasks-example/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/</vite-react-tasks-example>/assets/index.1ea3da2c.js"></script>
-    <link rel="stylesheet" href="/</vite-react-tasks-example>/assets/index.60a474d4.css">
+    <script type="module" crossorigin src="/vite-react-tasks-example/assets/index.1ea3da2c.js"></script>
+    <link rel="stylesheet" href="/vite-react-tasks-example/assets/index.60a474d4.css">
   </head>
   <body>
     <div id="root"></div>
